--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  background-color: var(--bg-main);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
   color: white;
+  scroll-snap-type: y mandatory;
 }
 
-.App-link {
-  color: #61dafb;
+.app > div:nth-child(even) {
+  background-color: var(--bg-white);
+  color: var(--bg-main);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app .subtitle {
+  font-size: min(max(2rem, 5vw), 3rem);
+  font-weight: 700;
+  text-align: center;
+  margin: 10px auto;
 }
+
