--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,19 @@
+:root {
+  --bg-main: #030412;
+  --bg-light: #171150;
+  --bg-white: rgba(255, 255, 255, 0.961);
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',  'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,3 +24,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.container {
+  min-height: 100vh;
+  /* padding: 20px; */
+  padding: 75px 20px 20px 20px;
+  scroll-snap-type: y mandatory;
+  scroll-snap-align: start;
+}
+
+@media screen and (min-width: 900px) {
+  .container {
+    /* padding: 34px; */
+    padding-top: 95px 34px 34px 34px;
+  }
+}
+
