--- a/src/pages/css/Osm.css
+++ b/src/pages/css/Osm.css
@@ -1,5 +1,4 @@
 .osm .about__text .addresses {
-  width: 100%;
   text-align: left;
   font-size: large;
   margin-bottom: 1rem;
@@ -8,4 +7,7 @@
 .addresses > strong {
   width: 150px;
   display: inline-block;
+}
+.addresses > .MuiLink-root {
+  text-overflow: ellipsis;
 }
