--- a/src/components/css/Founder.css
+++ b/src/components/css/Founder.css
@@ -1,21 +1,21 @@
 .founder {
   width: 255px;
   min-height: 235px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  margin: 40px;
+  margin: 10px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   /* background-color: var(--bg-light); */
 }
 
 .founder > span.founder__image {
   width: 180px;
   height: 180px;
+  margin: 5px auto;
   border-radius: 50%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -111,6 +111,9 @@
     flex-direction: row;
   }
   .founder {
-    margin: 15px;
+    margin: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   }
 }
