--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,10 @@
 
 html {
   scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
 }
 
 body {
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',  'Oxygen',
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -34,17 +33,21 @@ code {
 }
 
 .container {
-  min-height: 100vh;
   /* padding: 20px; */
   padding: 75px 20px 20px 20px;
-  scroll-snap-type: y mandatory;
-  scroll-snap-align: start;
 }
 
 @media screen and (min-width: 900px) {
   .container {
     /* padding: 34px; */
+
     padding-top: 95px 34px 34px 34px;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .container {
+    min-height: 100vh;
   }
 }
 
