--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -17,19 +17,25 @@
   font-weight: bolder;
 }
 
+.home__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .home__image > img {
   object-fit: contain;
   width: 100%;
   height: 100%;
   max-width: 700px;
   max-height: 60vh;
-  border-radius: 36px;
-  opacity: 70%;
-  clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 80%);
+  /* border-radius: 36px; */
+  /* opacity: 70%; */
+  /* clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 80%); */
 }
 .btn.MuiButton-root {
-  padding: 8px 20px;
-  border: 4px solid darkblue;
+  padding: 6px 20px;
+  border: 2px solid darkblue;
   margin-top: 15px;
   color: white;
   cursor: pointer;
@@ -38,7 +44,8 @@
 }
 .btn.MuiButton-root:hover {
   transition: 0.2s;
-  background-color: var(--bg-light);
+  background-color: var(--bg-white);
+  color: var(--bg-main);
   transform: translateY(-3px);
 }
 .home .btn.MuiButton-root.btn-large {
