--- a/src/pages/css/Roadmap.css
+++ b/src/pages/css/Roadmap.css
@@ -11,7 +11,6 @@
   flex-direction: column;
   align-items: center;
   padding: 15px;
-  /* min-width: 350px; */
   max-width: 400px;
   border-radius: 24px;
   background-color: var(--bg-light);
@@ -34,7 +33,11 @@
   border-radius: 50%;
   width: 100px;
   height: 100px;
+  gap: 5px;
   border: solid 4px var(--bg-white);
+}
+.phase .phase__no > i {
+  font-size: 14pt;
 }
 
 .phase > ul {
