--- a/src/components/css/Founder.css
+++ b/src/components/css/Founder.css
@@ -82,8 +82,8 @@
   object-fit: contain;
   width: 95%;
   height: 95%;
-  max-width: 300px;
-  max-height: 400px;
+  max-width: 250px;
+  max-height: 300px;
 }
 
 .founder__detail section.info {
@@ -115,5 +115,9 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
       rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+  .founder__detail section.photo img {
+    max-width: 300px;
+    max-height: 400px;
   }
 }
