--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -115,7 +115,9 @@ footer section.copyright {
   height: 48px;
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
+  font-size: small;
   background-color: var(--bg-light);
 }
 
@@ -129,5 +131,8 @@ footer section.copyright {
   }
   footer section.partners > .partners__container {
     flex-direction: row;
+  }
+  footer section.copyright {
+    font-size: medium;
   }
 }
