--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -6,7 +6,9 @@ footer.footer {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  gap: 25px;
+  gap: 35px;
+  margin-top: -28px;
+  border-radius: 28px 28px 0 0;
 }
 
 footer .MuiLink-root {
@@ -25,7 +27,7 @@ footer section.socials {
   width: 80vw;
 }
 footer section.socials span {
-  height: 6px;
+  height: 5px;
   border-radius: 6px;
   background-color: var(--bg-white);
   width: 20%;
@@ -61,6 +63,8 @@ footer section.partners > .partners__container {
   flex-wrap: wrap;
   gap: 20px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .partners__container .MuiLink-root {
@@ -73,7 +77,8 @@ footer section.partners > .partners__container {
 footer section.partners img {
   object-fit: contain;
   width: 100px;
-  height: 100px;
+  max-height: 100px;
+  min-height: 65px;
 }
 
 footer section.footer__links {
@@ -103,7 +108,7 @@ footer section > h3 {
 }
 
 section.footer__links ul li {
-  margin: 15px 0;
+  margin: 5px 0;
   background-color: var(--bg-main);
   border-radius: 8px;
   border: solid 1px var(--bg-white);
@@ -122,8 +127,14 @@ footer section.copyright {
 }
 
 @media screen and (min-width: 900px) {
+  footer.footer {
+    border-radius: 36px 36px 0 0;
+  }
   footer section.footer__links ul {
     gap: 1.5rem;
+  }
+  section.footer__links ul li {
+    margin: 15px 0;
   }
   footer section.socials > div.flex {
     justify-content: space-around;
