--- a/src/index.css
+++ b/src/index.css
@@ -39,9 +39,10 @@ code {
 
 @media screen and (min-width: 900px) {
   .container {
-    /* padding: 34px; */
-
     padding-top: 95px 34px 34px 34px;
+  }
+  .container > div.flex {
+    min-height: 100%;
   }
 }
 
